Happy end. Не трогал bg на devices.

--- a/src/components/about-company/about-company.scss
+++ b/src/components/about-company/about-company.scss
@@ -18,7 +18,7 @@
             margin-bottom: vc(20);
         }
 
-        h2 {
+        .h2 {
             margin-right: vc(96);
 
             @include devices {
