--- a/src/components/beginning/beginning.scss
+++ b/src/components/beginning/beginning.scss
@@ -1,10 +1,13 @@
 .beginning {
     margin-top: vc(100);
 
-    h2 {
-        font-weight: 700;
-        font-size: vc(48);
-        line-height: vc(58);
-        color: $color-white;
+    @include devices {
+        margin-top: vc(40);
+    }
+
+    .h2 {
+        @include devices {
+            width: 100%;
+        }
     }
 }
