--- a/src/components/home-video/home-video.scss
+++ b/src/components/home-video/home-video.scss
@@ -5,19 +5,38 @@
         justify-content: space-between;
         margin-top: vc(48);
         margin-bottom: vc(60);
+
+        @include devices {
+            display: flex;
+            flex-direction: column;
+            margin-top: vc(40);
+            margin-bottom: vc(40);
+        }
     }
 
     &__img {
+        .h2 {
+            @include devices {
+                width: 100%;
+                margin-bottom: vc(10);
+            }
+        }
+
 
         &_main {
-            width: vc(615);
-            height: vc(406);
             margin-bottom: vc(21);
 
             img {
                 background: #312323;
-                border: 3px solid #1D0B0B;
-                border-radius: 20px;
+                border: vc(3) solid #1D0B0B;
+                border-radius: vc(20);
+                width: vc(615);
+                height: vc(406);
+
+                @include devices {
+                    width: vc(360);
+                    height: vc(238);
+                }
             }
         }
 
@@ -26,30 +45,41 @@
             gap: vc(14);
 
             img {
+                background: #312323;
+                border: vc(3) solid #1D0B0B;
+                border-radius: vc(20);
+                object-fit: cover;
                 width: vc(159);
                 height: vc(105);
-                background: #312323;
-                border: 3px solid #1D0B0B;
-                border-radius: 20px;
-                object-fit: cover;
+
+                @include devices {
+                    width: vc(109);
+                    height: vc(72);
+                    border: vc(2) solid #1D0B0B;
+                    border-radius: vc(5);
+                }
             }
         }
     }
 
     &__title {
-
-        h2 {
-            font-weight: 700;
-            font-size: vc(48);
-            line-height: vc(58);
-            color: $color-white;
+        .h2 {
             margin-bottom: vc(20);
+
+            @include devices {
+                width: 100%;
+            }
         }
 
         &_abilities {
             display: flex;
             justify-content: space-between;
-            margin-bottom: vc(20);
+            padding-bottom: vc(20);
+            border-bottom: vc(1) solid #C1C1C1;
+
+            @include devices {
+                margin-top: vc(20);
+            }
 
             &-price {
                 display: flex;
@@ -61,6 +91,11 @@
                     font-size: vc(20);
                     line-height: vc(24);
                     color: $color-white;
+
+                    @include devices {
+                        font-size: vc(16);
+                        line-height: vc(19);
+                    }
                 }
 
                 h3 {
@@ -68,6 +103,11 @@
                     font-size: vc(32);
                     line-height: vc(39);
                     color: $color-orange;
+
+                    @include devices {
+                        font-size: vc(26);
+                        line-height: vc(31);
+                    }
                 }
             }
 
@@ -81,6 +121,11 @@
                     font-size: vc(20);
                     line-height: vc(24);
                     color: $color-white;
+
+                    @include devices {
+                        font-size: vc(16);
+                        line-height: vc(19);
+                    }
                 }
 
                 h3 {
@@ -88,15 +133,17 @@
                     font-size: vc(32);
                     line-height: vc(39);
                     color: $color-orange;
+
+                    @include devices {
+                        font-size: vc(26);
+                        line-height: vc(31);
+                    }
                 }
             }
         }
 
         &_description {
-            width: vc(515);
-            height: vc(189);
-            border-top: 1px solid #C1C1C1;
-            border-bottom: 1px solid #C1C1C1;
+            max-width: vc(515);
             margin-bottom: vc(20);
 
             h3 {
@@ -106,6 +153,11 @@
                 color: $color-white;
                 margin-bottom: vc(10);
                 margin-top: vc(20);
+
+                @include devices {
+                    font-size: vc(16);
+                    line-height: vc(19);
+                }
             }
 
             p {
@@ -113,6 +165,10 @@
                 font-size: vc(13);
                 line-height: 149%;
                 color: $color-white;
+
+                @include devices {
+                    font-size: vc(13);
+                }
             }
         }
 
@@ -120,31 +176,51 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            border-top: vc(1) solid #C1C1C1;
+            padding-top: vc(20);
 
             &-way {
                 display: flex;
                 flex-direction: column;
                 gap: vc(10);
 
+                @include devices {
+                    gap: vc(5);
+                }
+
                 p {
                     font-weight: 500;
                     font-size: vc(20);
                     line-height: vc(24);
                     color: $color-white;
+
+                    @include devices {
+                        font-size: vc(16);
+                        line-height: vc(19);
+                    }
                 }
 
                 img {
                     width: vc(156);
                     height: vc(28);
+
+                    @include devices {
+                        width: vc(128);
+                        height: vc(23);
+                    }
                 }
             }
 
             &-order {
-
                 a {
                     font-weight: 600;
                     font-size: vc(16);
                     line-height: vc(19);
+
+                    @include devices {
+                        font-size: vc(13);
+                        line-height: vc(16);
+                    }
                 }
             }
         }
