--- a/src/components/reviews/reviews.pug
+++ b/src/components/reviews/reviews.pug
@@ -2,8 +2,15 @@ mixin reviews()
     .reviews
         .container
             .reviews__title
-                h2 Отзывы клиентов
-            .reviews__info
+                h2.h2 Отзывы клиентов
+            .reviews__infos.for-desktop
                 +review()
                 +review()
                 +review()
+            .reviews__info.for-devices
+                +review()
+            .reviews__markers.for-devices
+                .reviews__markers_marker
+                .reviews__markers_marker
+                .reviews__markers_marker
+                .reviews__markers_marker
