--- a/src/components/exposure/exposure.scss
+++ b/src/components/exposure/exposure.scss
@@ -7,6 +7,9 @@
     &__icon {
         width: vc(42);
         height: vc(42);
+        display: flex;
+        align-items: center;
+        justify-content: center;
         border: vc(1) solid $color-orange;
         border-radius: 100%;
         position: absolute;
@@ -15,8 +18,6 @@
             position: relative;
             width: vc(18);
             height: vc(18);
-            top: vc(10);
-            left: vc(10);
         }
     }
 
