--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -14,11 +14,10 @@ append vars
 
     each metaValue, metaKey in data.general.meta
         - meta[metaKey] = metaValue
-    - body.classList = 'bg-image'
 
 block content
     +header()
-    main
+    main.bg-image
         +services()
         +cases()
         +scholl()
